doc: add body examples
